<resources>
    <string name="app_name">ServerManager</string>
    <string name="action_settings">Settings</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="server_name">Server Name</string>
    <string name="server_url">Server URL</string>
    <string name="server_password">Password</string>
    <string name="server_username">Username</string>

    <string name="save_settings">Save</string>
    <string name="delete">Delete</string>

    <string name="server_settings_error">One or multiple parameters are invalid</string>

    <string name="no_servers">No servers found, please add one by clicking the button below.</string>
    <string name="add_server">Add Server</string>

    <string name="missing_server_error">The URL for this server is not working</string>

    <string name="status">Status</string>
    <string name="player_name">PLayer Name</string>
    <string name="player_id">Player ID</string>
    <string name="kick_player">Kick Player</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="update">Update</string>

    <string name="are_u_sure">Are you sure you want to delete this server?</string>
</resources>